<resources>
    <string name="app_name">Stronger2gether</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description_splash_logo">Splash Screen Logo</string>
    <string name="menu_home">Home</string>
    <string name="menu_person">Person</string>
    <string name="home_tab_scientist">Scientist</string>
    <string name="home_completed_campaigns">Last Completed Campaigns</string>
    <string name="infoimage">infoImage</string>
    <string name="home_completed_donations_show_all">See All</string>
    <string name="menu_home_search">Search</string>
    <string name="menu_home_information">Information</string>
    <string name="home_our_volunteer_ambassadors">Our Volunteer Ambassadors</string>
    <string name="home_volunteer_name">Emilia Clark</string>
    <string name="application_donate">Donate</string>
    <string name="menu_campaign">Campaigns</string>
    <string name="menu_notification">Notification</string>
    <string name="demo_user">Olivia Gonzales</string>
    <string name="demo_user_acc">Lovely Helpful Person</string>
    <string name="total_donate">Total Donate :</string>
    <string name="total_donate_value">$9.023.451</string>
    <string name="registered_user">Registered User :</string>
    <string name="registered_user_value">11.357</string>
    <string name="home_last_companion">Last Companion</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed magna bibendum arcu gravida fermentum ut tempor dui. In vestibulum sit amet neque sed vestibulum.</string>
    <string name="sample_campaign_value">$20.000 / $65.000</string>
    <string name="patient_name">Patient Name</string>
    <string name="success_stories">Success Stories</string>
    <string name="send_donate">Send</string>
    <string name="_10">$10</string>
    <string name="_30">$30</string>
    <string name="_60">$60</string>
    <string name="_120">$120</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="report">Report</string>
    <string name="_2500_2600">$2500 / $2600</string>
    <string name="donation">Donation</string>
    <string name="favourites">Favourites</string>
    <string name="achievements">Achievements</string>
    <string name="best_donator_in_the_world">Best Donator in the World!</string>
</resources>