<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.CampaignDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityCampaignToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activityCampaignImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/campaignPatientname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Martin"
        android:textColor="@color/colorOnDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/campaignPatientSurname"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/campaignPatientSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Skywalker"
        android:textColor="@color/colorOnDark"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/donateBar"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/donateBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/activityCampaignImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityCampaignImage">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorComponentDark"
            android:text="@string/_10" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorComponentDark"
            android:text="@string/_30" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorComponentDark"
            android:text="@string/_60" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/send_donate" />
    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/colorOnDark"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:isScrollContainer="true">

            <TextView
                android:id="@+id/campaignDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/colorComponentDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/campaignDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorComponentDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/campaignDescriptionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorComponentDark"
                android:textSize="18sp" />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>